--- a/portfolioStyle.css
+++ b/portfolioStyle.css
@@ -3,6 +3,20 @@ body {
 }
 
 #stunt {
-    font-size: 2rem;
-    color: rgb(254, 121, 129);
+color: brown;
+ 
+
 }
+
+#h1 {
+    float: left;
+    
+}
+
+
+
+img { 
+    width: 300px;
+    height: 400px;
+}
+
