--- a/portfolioStyle.css
+++ b/portfolioStyle.css
@@ -41,12 +41,11 @@ a {
 #header 
 
 a:link {
-color: rgb(92, 79, 38);
+color: rgb(225, 255, 170);
 }
 
-
 a:visited {
-color: rgb(13, 0, 128);
+color: rgb(207, 202, 245);
 }
 
 
@@ -57,5 +56,29 @@ color: red;
 
 a:active {
 color: yellow;
+}
+
+ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    background-color: #333;
+}
+
+li {
+    float: left;
+}
+
+li a {
+    display: block;
+    color: white;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+}
+
+li a:hover {
+    background-color: #111;
 }
 
